<resources>
    <string name="app_name">Clonium</string>
    <string name="start_game">Start game</string>
    <string name="colored_chip_description">Colored chip of player</string>
    <string name="player_tactics_prompt">Choose type of player</string>

    <string name="human">Human</string>
    <string name="random_picker">Random picker</string>
    <string name="level_maximizer">Level maximizer</string>
    <string name="chip_count_maximizer">Chip count maximizer</string>
    <string name="level_minimizer">Level minimizer</string>
    <string name="level_balancer">Level balancer</string>
    <string name="allied_level_balancer">Ally of %d</string>

    <string name="use_random_order">Random order</string>
    <string name="previous_board">Previous board</string>
    <string name="next_board">Next board</string>
    <string name="drag_handle">Drag handle</string>
    <string name="player_chip">player chip</string>
    <string name="sum_level">sum level</string>
    <string name="chip_count">chip count</string>
    <string name="player_tactic">player tactic</string>
    <string name="shading">shading</string>
    <string name="colored_chips_prompt">Choose color of player\'s chips</string>
</resources>
