<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
>
    <LinearLayout
            android:id="@+id/player_layout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
    >
        <!-- Q: takes ~300ms -->
        <CheckBox
                android:id="@+id/use_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                tools:checked="true"
        />
        <!-- NOTE: bg = null remove spinner's arrow -->
        <!-- Q: takes 400ms -->
        <Spinner
                android:id="@+id/colored_chips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:spinnerMode="dropdown"
                android:dropDownWidth="wrap_content"
                android:prompt="@string/colored_chips_prompt"
                tools:listitem="@layout/colored_chip_item"
        />
        <!-- Q: takes 300ms -->
        <Spinner
                android:id="@+id/player_tactics"
                android:layout_width="@dimen/player_tactics_max_width"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:spinnerMode="dropdown"
                android:dropDownWidth="wrap_content"
                android:prompt="@string/player_tactics_prompt"
                tools:listitem="@layout/player_tactic_item"
        />
        <ImageView
                android:id="@+id/drag_handle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/ic_reorder"
                android:contentDescription="@string/drag_handle"
        />
    </LinearLayout>
</androidx.cardview.widget.CardView>
