<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <data>
        <variable name="viewModel" type="com.pierbezuhoff.clonium.ui.newgame.NewGameViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.newgame.NewGameActivity"
    >
        <!-- TODO: separate landscape layout -->
        <com.pierbezuhoff.clonium.ui.newgame.BoardView
                android:id="@+id/board_view"
                android:layout_width="200dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintDimensionRatio="w,1:1"
                app:viewModel="@{viewModel}"
        />
        <ImageButton
                android:id="@+id/previous_board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/board_view"
                app:layout_constraintBottom_toBottomOf="@id/board_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/board_view"
                app:srcCompat="@drawable/ic_arrow_left"
                android:contentDescription="@string/previous_board"
                android:onClick="@{view -> viewModel.previousBoard()}"
        />
        <ImageButton
                android:id="@+id/next_board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/board_view"
                app:layout_constraintBottom_toBottomOf="@id/board_view"
                app:layout_constraintStart_toEndOf="@id/board_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_arrow_right"
                android:contentDescription="@string/next_board"
                android:onClick="@{view -> viewModel.nextBoard()}"
        />
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/players_recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/board_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:verticalSpace="@{@dimen/new_game_order_vertical_space}"
                tools:listitem="@layout/player_item"
                tools:itemCount="4"
        />
        <!-- Q: takes ~500ms -->
        <Switch
                android:id="@+id/use_random_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/players_recycler_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/players_recycler_view"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintHorizontal_bias="1.0"
                android:text="@string/use_random_order"
                android:checked="@={viewModel.useRandomOrder}"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>